# sardine-web

./: MANIFEST.in  README.md  pyproject.toml  setup.py
sardine_web/: __init__.py
sardine_web/client/src/: EditorSetup.ts
sardine_web/client/src/themes/: sardineTheme.ts
sardine_web/server/: flask_server.py
