[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sardine-web"
dynamic = ["version"]
description = "Official web editor plugin for sardine-system"
authors = [
    { name = "Raphaël Forment" },
    { email = "raphael.forment@gmail.com" },
    { name = "thegamecracks" },
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"

keywords = ["algorave", "live-coding", "music", "patterns"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "appdirs>=1.4",
    "click>=8.1.3",
    "Flask-SocketIO>=5.3.2",
    "Flask-Cors>=3.0",
    "Flask>=2.2.2",
    "pygtail>=0.14.0",
    "rich>=12.5",
    "sardine-system>=0.4.0",
]

[project.entry-points."sardine.cli_main_hooks"]
install_web = "sardine_web:install_web"

[project.optional-dependencies]
dev = [
    "black>=22.8",
]

[project.urls]
Homepage = "https://sardine.raphaelforment.fr"
Documentation = "https://sardine.raphaelforment.fr"
"Source Code" = "https://github.com/sardine-system/sardine-web"
"Bug Tracker" = "https://github.com/sardine-system/sardine-web/issues"

[tool.setuptools.dynamic]
version = { attr = "sardine_web.__version__" }
